[package]
name = "rget"
version = "0.1.0"
edition = "2021"
description = "wget clone in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
console = "0.15.7"
indicatif = "0.17.6"
reqwest = "0.11.18"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.0"
